behavioral: add movie external ID search and wire parser into processor
Add three-stage search chain to TMDBMovieProvider (direct TMDB lookup,
/find for IMDB/TVDB, text search fallback) mirroring TMDBSeriesProvider.
Wire ExternalIdVideoFileMetadataParser into MovieFileProcessor so movie
filenames with external ID tags are parsed and used for metadata lookup.